fix: Adjust overflow property for circle-box and enforce line-height for h3-title

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5409,6 +5409,7 @@ img:is([sizes="auto" i], [sizes^="auto," i]) {
 }
 
 .circle-box {
+  overflow: unset !important;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -5672,7 +5673,7 @@ img:is([sizes="auto" i], [sizes^="auto," i]) {
   .circle-box .h3-title {
     font-size: 26px !important;
     /*26px;*/
-    line-height: 2.03;
+    line-height: 2.03 !important;
   }
 
   .sc-how-we-can-help .sc-btn a {
